travis.yml: make sure "test" make target uses Makefile.orig for now
Signed-off-by: Steve Arnold <nerdboy@gentoo.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - make -f Makefile.orig deps
 
 script:
-  - make -f Makefile.orig && make test
+  - make -f Makefile.orig && make -f Makefile.orig test
