--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-dist: trusty
 sudo: required
 
 language: c
 
 install:
-  - sudo apt-get -y install libmedtls-dev
+  - sudo apt-get -y install libmbedtls-dev
 
 script:
   - make && make test
