--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ language: c
 addons:
   apt:
     update: true
-    packages:
-      - libmbedtls-dev
+
+before_install:
+  - sudo apt-get install -y libmbedtls-dev
 
 script:
   - make && make test
