optimize autotools input files and macros (libtool is still weird)
* compiles and installs goldy/docs, no test or client patch yet
* something in the libev check makes libtool change the -lev
  to /usr/$libdir/libev.so

Signed-off-by: Steve Arnold <nerdboy@gentoo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,9 +12,9 @@ AM_CPPFLAGS   = -I$(includedir) -D_FILE_OFFSET_BITS=64
 AM_CFLAGS     = $(DBG) $(LOCAL_CFLAGS) \
                 -fno-strict-aliasing
 
-AM_LDFLAGS    = $(LIBS) -lm -lz $(DBG)
+AM_LDFLAGS    = -g $(DBG)
 
-goldy_LDADD   = -lmbedtls -lmbedx509 -lmbedcrypto
+goldy_LDADD   = -lm -lz
 
 bin_PROGRAMS  = goldy
 
