--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-sudo: false
+dist: xenial
+sudo: required
 
 language: c
 
-install:
-  - make deps
+addons:
+  apt:
+    update: true
+    packages:
+      - libmbedtls-dev
+      - libev-dev
+      - libev-libevent-dev
 
 script:
-  - make && make test
+  - ./autogen.sh && ./configure && make
