--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ sudo: required
 
 language: c
 
-addons:
-  apt:
-    update: true
-    packages:
-      - libmbedtls-dev
-      - libev-dev
-      - libev-libevent-dev
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y debian-keyring debian-ports-archive-keyring debian-archive-keyring
+  - sudo sh -c "echo 'deb [arch=amd64] http://ftp.us.debian.org/debian/ stretch main contrib non-free' >> /etc/apt/sources.list"
+  - sudo sh -c "echo 'deb [arch=amd64] http://ftp.us.debian.org/debian/ stretch-updates main contrib non-free' >> /etc/apt/sources.list"
+  - sudo apt-get update
+  - sudo apt-get install -y libmbedtls-dev libev-dev
 
 script:
   - ./autogen.sh && ./configure && make
