Add goldy-client patch and update Makefile.am to build both
Signed-off-by: Steve Arnold <nerdboy@gentoo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,9 @@ AM_LDFLAGS    = -g $(DBG)
 
 goldy_LDADD   = -lm -lz
 
-bin_PROGRAMS  = goldy
+goldy_client_LDADD  = -lm -lz
+
+bin_PROGRAMS  = goldy goldy-client
 
 goldy_SOURCES = daemonize.c \
                 daemonize.h \
@@ -26,3 +28,9 @@ goldy_SOURCES = daemonize.c \
                 log.h \
                 utlist.h
 
+goldy_client_SOURCES = goldy-client.c \
+                       daemonize.c \
+                       daemonize.h \
+                       goldy.h \
+                       log.c \
+                       log.h
