--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
 *.o
 *~
-/goldy
-/goldy-client
-/test/dtls_test_client
-/test/send_one_dtls_packet
-/test/udp_test_server
-/deps/mbedtls-*
-/deps/libev-*
+goldy
+goldy-client
+test/dtls_test_client
+test/send_one_dtls_packet
+test/udp_test_server
+.deps/
+Makefile
+Makefile.in
+aclocal.m4
+auto/
+autom4te.cache/
+config.h
+config.h.in
+config.log
+config.status
+configure
+libltdl/
+libtool
+m4/libtool.m4
+m4/ltargz.m4
+m4/ltdl.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+stamp-h1
