--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,8 @@ sudo: required
 language: c
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y debian-keyring debian-ports-archive-keyring debian-archive-keyring
-  - sudo sh -c "echo 'deb [arch=amd64] http://ftp.us.debian.org/debian/ stretch main contrib non-free' >> /etc/apt/sources.list"
-  - sudo sh -c "echo 'deb [arch=amd64] http://ftp.us.debian.org/debian/ stretch-updates main contrib non-free' >> /etc/apt/sources.list"
-  - sudo apt-get update
+  - sudo add-apt-repository ppa:nerdboy/ppa-crypto -y
+  - sudo apt-get update -q
   - sudo apt-get install -y libmbedtls-dev libev-dev
 
 script:
