--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
   - sudo apt-get install -y libmbedtls-dev libev-dev
 
 script:
-  - ./autogen.sh && ./configure && make
+  - ./autogen.sh && ./configure && make check
