.travis.yml: add check pkg to dependency install (?)
Signed-off-by: Steve Arnold <nerdboy@gentoo.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: c
 before_install:
   - sudo add-apt-repository ppa:nerdboy/ppa-crypto -y
   - sudo apt-get update -q
-  - sudo apt-get install -y libmbedtls-dev libev-dev
+  - sudo apt-get install -y libmbedtls-dev libev-dev check
 
 script:
   - ./autogen.sh && ./configure && make check
